--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ generation.</p>
 <li><a href="//www.twilio.com/docs/quickstart/client">Twilio Client Quickstart</a></li>
 <li><a href="//www.twilio.com/docs/quickstart/python/twiml">TwiML response with the twilio-python library</a></li>
 </ul>
-</div><div data-title="Generate a Capability Token" data-file="warm_transfer_flask/token.py" class="step"><h2 id="generate-a-capability-token">Generate a Capability Token</h2>
+</div><div data-title="Generating a Capability Token" data-file="warm_transfer_flask/token.py" class="step"><h2 id="generating-a-capability-token">Generating a Capability Token</h2>
 <p>In order to connect the <a href="//www.twilio.com/webrtc">Twilio Voice Web Client</a>
 we need a <a href="//www.twilio.com/docs/client/capability-tokens">capability token</a>.</p>
 <p>To allow incoming connections through the web client an identifier must
@@ -85,14 +85,14 @@ a POST request asking for instructions. We&#39;ll use <a href="//www.twilio.com/
 to join a conference room and the Twilio REST API client to start a call with
 the first agent, so he can join the same conference.</p>
 <p>When providing instructions to the client, we also provide a
-<a href="//www.twilio.com/docs/api/twiml/conference#attributes-waitUrl"><code>waitUrl</code></a>,
-which in our case is another end point of our application. This returns more TwiML
-to <a href="//www.twilio.com/docs/api/twiml/say">say</a> welcome to the user, and also
+<a href="//www.twilio.com/docs/api/twiml/conference#attributes-waitUrl"><code>waitUrl</code></a>.
+This URL is another end point of our application. This returns more TwiML
+to <a href="//www.twilio.com/docs/api/twiml/say">say</a> welcome to the user and also
 <a href="//www.twilio.com/docs/api/twiml/play">play</a> some music while on hold.
 Take a look at the code
 <a href="//github.com/TwilioDevEd/warm-transfer-sinatra/blob/master/lib/twiml_generator.rb#L12-L17">here</a></p>
 <p>We use the client&#39;s <a href="//www.twilio.com/help/faq/voice/what-is-a-call-sid"><code>CallSid</code></a> as the conference identifier. Since all participants
-need this identifier to join the conference, we&#39;ll need to store it in a database so that we can grab it when we dial the second agent in later.</p>
+need this identifier to join the conference, we&#39;ll need to store it in a database so that we can grab it when we dial the second agent in.</p>
 </div><div data-title="Providing TwiML Instruction For The Client" data-file="warm_transfer_flask/twiml_generator.py" data-highlight="13-19" class="step"><h2 id="providing-twiml-instruction-for-the-client">Providing TwiML Instruction For The Client</h2>
 <p>Here we create a <code>TwiMLResponse</code> that will contain a
 <a href="//www.twilio.com/docs/api/twiml/dial"><code>Dial</code></a> verb with a
@@ -113,11 +113,12 @@ receives the following parameters:</p>
 <p>Once the agent answers the call in the web client, a request is made to the
 callback URL instructing this call to join the conference where
 the client is already waiting.</p>
-</div><div data-title="Dial Second Agent Into the Call" data-file="warm_transfer_flask/views.py" data-highlight="38-42" class="step"><h2 id="dial-second-agent-into-the-call">Dial Second Agent Into the Call</h2>
+</div><div data-title="Dialing the Second Agent Into the Call" data-file="warm_transfer_flask/views.py" data-highlight="38-42" class="step"><h2 id="dialing-the-second-agent-into-the-call">Dialing the Second Agent Into the Call</h2>
 <p>When the client and the first agent are both in the call we are ready to
 perform a <em>warm  transfer</em> to a second agent. The first agent makes a
 request passing its <code>identifier</code> to allow us to look for the <code>conference_id</code>
-needed to dial the second agent in. Since we already have a <code>call</code> module we can simply use the <code>call_agent</code> function to connect the second agent in.</p>
+needed to dial the second agent in. Since we already have a <code>call</code> module we
+can simply use the <code>call_agent</code> function to connect the second agent in.</p>
 </div><div data-title="The First Agent Leaves the Call" data-file="warm_transfer_flask/twiml_generator.py" data-highlight="16-17" class="step"><h2 id="the-first-agent-leaves-the-call">The First Agent Leaves the Call</h2>
 <p>When the three participants have joined the same call, the first agent has
 served his purpose. Now he can drop the call, leaving agent two and the client
@@ -135,7 +136,7 @@ transferred to some else.</p>
 <p>If you&#39;re a Python developer working with Twilio, you might also enjoy these
 tutorials:</p>
 <p><a href="//www.twilio.com/docs/tutorials/walkthrough/automated-survey/python/flask"><strong>Automated-Survey-Flask</strong></a></p>
-<p>Instantly collect structured data from your users with a survey conducted over a voice call or SMS text messages.</p>
+<p>Instantly collect structured data from your users with a survey conducted over a call or SMS text messages.</p>
 <p><a href="//www.twilio.com/docs/tutorials/walkthrough/browser-calls/python/flask"><strong>Browser-Calls</strong></a></p>
 <p>Learn how to use Twilio Client to make browser-to-phone and browser-to-browser calls with ease.</p>
 <p>Thanks for checking out this tutorial! If you have any feedback
